# Axiomic

./: .gitignore  README.md  axiomic-build-prompt.md  pnpm-lock.yaml  pnpm-workspace.yaml
.copilot-sessions/: .gitignore  CAPTURE-REPORT-9d3f957f.md
.copilot-sessions/commands/: 282ea472-70f0-43df-8179-b6d931e61305.md  282ea472-70f0-43df-8179-b6d931e61305.sh  2f9674e0-c44e-407e-afba-e223c3f370e5.md  2f9674e0-c44e-407e-afba-e223c3f370e5.sh  42062dc0-3623-4907-9e81-fd0adf5adbb9.md  42062dc0-3623-4907-9e81-fd0adf5adbb9.sh  5b269693-753b-489a-9647-850483fb4513.md  5b269693-753b-489a-9647-850483fb4513.sh  632ca598-ba65-44cd-b762-10cff07ead2d.md  632ca598-ba65-44cd-b762-10cff07ead2d.sh  9d3f957f-0a5b-4502-92b8-a001d2f610f2.md  9d3f957f-0a5b-4502-92b8-a001d2f610f2.sh  a58d4015-4427-410f-bee5-80d6a7350989.md  a58d4015-4427-410f-bee5-80d6a7350989.sh  d57b342e-92a2-404c-9a23-3e8655693ea7.md  d57b342e-92a2-404c-9a23-3e8655693ea7.sh  ea4986d6-1201-446c-a879-d4b129df8917.md  ea4986d6-1201-446c-a879-d4b129df8917.sh  logs.md  logs.sh
.copilot-sessions/logs/: 282ea472-70f0-43df-8179-b6d931e61305.jsonl  282ea472-70f0-43df-8179-b6d931e61305.transcript.jsonl  2f9674e0-c44e-407e-afba-e223c3f370e5.jsonl  2f9674e0-c44e-407e-afba-e223c3f370e5.transcript.jsonl  42062dc0-3623-4907-9e81-fd0adf5adbb9.jsonl  42062dc0-3623-4907-9e81-fd0adf5adbb9.transcript.jsonl  5b269693-753b-489a-9647-850483fb4513.transcript.jsonl  632ca598-ba65-44cd-b762-10cff07ead2d.jsonl  632ca598-ba65-44cd-b762-10cff07ead2d.transcript.jsonl  9d3f957f-0a5b-4502-92b8-a001d2f610f2.transcript.jsonl  a58d4015-4427-410f-bee5-80d6a7350989.jsonl  a58d4015-4427-410f-bee5-80d6a7350989.transcript.jsonl  d57b342e-92a2-404c-9a23-3e8655693ea7.jsonl  d57b342e-92a2-404c-9a23-3e8655693ea7.transcript.jsonl  ea4986d6-1201-446c-a879-d4b129df8917.jsonl  ea4986d6-1201-446c-a879-d4b129df8917.transcript.jsonl
.copilot-sessions/responses/: 282ea472-70f0-43df-8179-b6d931e61305.md  2f9674e0-c44e-407e-afba-e223c3f370e5.md  42062dc0-3623-4907-9e81-fd0adf5adbb9.md  5b269693-753b-489a-9647-850483fb4513.md  (+4 more)
core/: Cargo.toml
core/src/: backtest.rs  csv.rs  indicators.rs  lib.rs  types.rs
core/tests/: engine_tests.rs
data/: Cargo.toml
data/src/: lib.rs  main.rs
desktop/: README.md  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
docs/: DEPLOYMENT.md  TESTING.md  USAGE.md  skills-deep-dive.md
docs/features/: README.md  (+10 more)
examples/: AAPL-sample.csv
proxy/: .dev.vars.example  README.md  package.json  tsconfig.json  wrangler.toml
web/: .env.example  index.html  netlify.toml  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vercel.json  vite.config.ts  vitest.config.ts
(+111 files in other folders)
