[package]
name = "axiomic-core"
version = "0.1.0"
edition = "2021"
description = "Axiomic analysis engine: technical indicators and backtesting, compiled to WASM."
license = "MIT"
repository = "https://github.com/your-org/axiomic"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
# Enable wasm-bindgen surface. Disabled for native (server/desktop) builds that
# consume the crate directly as an rlib.
wasm = ["dep:wasm-bindgen", "dep:serde-wasm-bindgen", "dep:console_error_panic_hook"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
